webpages/styles/colors.css
:root {
  --brand-orange: #ff7b26;
  --brand-orange-min-font-weight: normal;
  --orange: #ff7b26;
  --orange-opacity35: rgba(255, 123, 38, 0.35);
  --yellow-opacity50: rgba(253, 221, 43, 0.5);
  --green: #008000;
  --light-green-variant: #53b31c;
  --green-text: var(--light-green-variant);
  --blue: #175ef8;
  --blue-variant: #0e44b8;
  --blue-text: #1aa0d8;
  --red: #fd2b2b;
  --red-opacity75: rgba(253, 43, 43, 0.75);
  --red-variant: #d81212;
  --purple-opacity75: rgba(177, 23, 248, 0.75);
  --dark-red-variant: #d84a12;
  --dark-red-text: var(--dark-red-variant);
  --white-text: #fff;

  --page-background: #181818;
  --content-background: #292929;
  --navigation-background: #1c1c1c;
  --search-toolbar-background: #1c1c1c;
  --button-background: #181818;
  --button-hover-background: #1a1a1a;
  --tab-hover-underline: #1e1e1e;
  --input-background: #212121;
  --search-input-background: var(--content-background);
  --switch-border: #808080;
  --switch-inner-background: #eee;
  --tooltip-background: #000;
  --comment-background: #1c1c1c;
  --admin-comment-background: #0000007a;
  --unread-comment-background: #0d0d0d;
  --unread-comment-border: inset 0px 0px 0px 2px #161616;
  --notice-background: rgb(253 221 43 / 23%);
  --notice-border: var(--yellow-opacity50);
  --notice-text: #fff;
  --notice-icon-filter: brightness(0) invert(1);
  --warning-background: var(--red-opacity75);
  --warning-border: var(--red);
  --warning-text: #fff;
  --warning-icon-filter: brightness(0) invert(1);
  --info-border: var(--content-separator);
  --update-background: var(--navigation-background);
  --update-border: var(--purple-opacity75);
  --update-text: #fff;

  --modal-overlay: rgba(0, 0, 0, 0.65);
  --hover-highlight: rgba(255, 255, 255, 0.05);
  --hover-highlight-reduced: rgba(255, 255, 255, 0.02);
  --hover-darken: rgba(0, 0, 0, 0.1);
  --sel-darken: rgba(0, 0, 0, 0.18);

  --large-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  --large-shadow-filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
  --content-border: #333;
  --content-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
  --searchbox-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
  --content-separator: #808080;
  --control-border: #000;
  --input-focus-shadow: 0 0 0 3px var(--orange-opacity35);
  --fullscreen-popup-shadow: 0 -1px 7px rgba(0, 0, 0, 0.2);

  --content-text: #fff;
  --content-icon-filter: brightness(0) invert(1);
  --description-text: #ddd;
  --description-icon-filter: brightness(0) invert(0.87);
  --label-text: #aaa;
  --gray-text: #808080;
  --placeholder-text: #777;
}

